--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,10 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.container {
+  min-height: 100vh;
+  min-width: 100vw;
+  background-color: var(--bg);
+  color: var(--textColor);
+}
